affichage des données sur la prage d'accueil + modification des fixtures

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -78,7 +78,7 @@
 				{% endblock %}
 			</header>
 		{% endblock %}
-
-		{% block body %}{% endblock %}
-	</body>
-</html>
+		<main class="container mx-auto"> {% block body %}{% endblock %}
+			</main>
+		</body>
+	</html>
