--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -40,7 +40,7 @@
 								<a class="nav-link" href="{{path('list')}}">Tous les Chiens</a>
 								<a class="nav-link" href="{{path('contact')}}">Contact</a>
 								{% if is_granted('ROLE_ANNONCEUR') %}
-									<a href="annonceur" class="nav-link" aria-current="page">Mes annonces
+									<a href="{{path("annonceur_index")}}" class="nav-link" aria-current="page">Mes annonces
 
 									</a>
 									<div class="mx-5 start-end">
