--- a/templates/annonceur/index.html.twig
+++ b/templates/annonceur/index.html.twig
@@ -7,9 +7,14 @@
 
 	<h1 class="text-center my-5">
 		Mes Annonces :</h1>
+	<div class="text-center">
+		<a href="{{path('annonce_new')}}">
+			<i class="fas fa-plus-circle"></i>
+		</a>
+	</div>
 	<section class="py-5">
-		{% for annonce in annonces %}
-			<div class="row justify-content-center mx-auto">
+		<div class="row justify-content-center mx-auto">
+			{% for annonce in annonces %}
 				<div class="col-sm-12 col-md-6 col-lg-3 col-3 mx-auto mt-2">
 					<div class="card" style=" width: 18rem;">
 						{% if annonce.firstImage %}
@@ -24,16 +29,11 @@
 						<a href="{{path('detailAnnonce', {id: annonce.id})}}" class="btn btn-dark-green">Voir Annonce</a>
 					</div>
 				</div>
-			</div>
-		{% endfor %}
-
-		<div class="col-sm-12 col-md-6 col-lg-3 col-3 mx-auto mt-2">
-
-			<a class="align-middle " href="{{path('annonce_new')}}">
-				<i class="fas fa-plus-circle"></i>
-			</a>
+			{% endfor %}
 		</div>
 	</div>
+
+
 </section>
 <section class="py-5">
 	<h1 class="text-center mt-5">
