--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -66,17 +66,13 @@
 		<div class="row mx-auto ">
 			{% for key, annonceur in annonceurs %}
 				<div class="col-3 p-0 ms-4 mb-2 card bg-dark text-white">
-
-
 					{% if annonceur.image %}
-
 						<img src="{{ asset(annonceur.image) }}" class="card-img" alt="...">
-
 					{% endif %}
 					<div class="card-img-overlay">
-						<h5 class="card-title">Card title</h5>
-						<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-						<p class="card-text">Last updated 3 mins ago</p>
+						<h5 class="card-title">Annonceur :{{annonceur.categorie.designation}}</h5>
+						<p class="card-text">nombre d'annonce :
+							{{annonceur.annonces|length}}</p>
 					</div>
 				</div>
 			{% endfor %}
