--- a/templates/adoptant/new.html.twig
+++ b/templates/adoptant/new.html.twig
@@ -16,7 +16,7 @@
 		{{ form_row(form.nom) }}
 		{{ form_row(form.prenom) }}
 		{{ form_row(form.email) }}
-		{{ form_row(form.motDePasse) }}
+		{{ form_row(form.plainPassword) }}
 		{{ form_row(form.residence) }}
 		{{ form_row(form.telephone) }}
 		{{ form_row(form.ville) }}
