--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,8 +9,8 @@
 		<link href="{{ asset('style/base.css') }}" rel="stylesheet">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-		<link href="{{ asset('style/style.css') }}" rel="stylesheet">
 		<link rel="icon" href="{{ asset('img/paw.ico') }}"/>
+		<link href="{{ asset('style/style.css') }}" rel="stylesheet">
 
 		{% block stylesheets %}
 			{#{{ encore_entry_link_tags('app') }}#}
@@ -18,6 +18,7 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 		<script src="https://kit.fontawesome.com/35ec662076.js" crossorigin="anonymous" defer></script>
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous" defer></script>
+		<script src="{{ asset('js/gallery.js') }}" defer></script>
 
 
 		{% block javascripts %}
