--- a/templates/demande_adoption/index.html.twig
+++ b/templates/demande_adoption/index.html.twig
@@ -1,24 +1,58 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello DemandeAdoptionController!
+{% block title %}
 {% endblock %}
 
 {% block body %}
-	<h2>{{annonce.titre}}</h2>
+<section class="py-5">
+		<h2>{{annonce.titre}}</h2>
 	<p>Publié le :
 		<b>
 			{{annonce.dateMAJ|date('d/m/Y à H:i')}}</b>
 	</p>
 	{% for dog in annonce.dogs %}
+	<h3 class="text-center title fs-1"> {{dog.nom}}</h3>
+		<div id="dogGallery" class="mx-auto row my-5">
 		{% for image in dog.images %}
-			<img src="{{ vich_uploader_asset(annonce.firstImage)}}"/>
+			<div class="col-4">
+			<picture>
+				<img class="img-fluid img-thumbnail dogImg" width="300" src="{{ vich_uploader_asset(image)}}"/>
+			</picture>
+			</div>
 		{% endfor %}
+		</div>
+		<ul class="list-group list-group-flush">
+		Races: 
+		{% for breed in dog.breeds %}
+			<li class="list-group-item">{{breed}}</li>
+		{% endfor %}
+		</ul>
 	{% endfor %}
+	
+{% if demandeExistante %}
+<p class='text-center'>Vous devez attendre que l'annonceur vous réponde pour pouvoir lui envoyer un message</p>
+
+{% else  %}
 	{{form_start(form)}}
 	{% for messageForm in form.messages %}
 		<h3>Formulaire de demande d'adoption</h3>
+		{{form_row(form.sujet)}}
 		{{form_row(messageForm.text,{label:'Message'})}}
 	{% endfor %}
-	<button type="submit">Envoyer</button>
+
+	<button class="btn btn-dark-green" type="submit">Envoyer</button>
 	{{form_end(form)}}
+{% endif %}
+</section>
+{# <section class="py-5">
+	<h3>Messages precedents</h3>
+  <ol class="list-group list-group-numbered py-2">
+        {% for message in messages %}
+            <li class="list-group-item">{{ message.text }}</li>
+        {% endfor %}
+    </ol>
+</section> #}
+
+	 <figure id="galleryContainer"><img src="" alt=""></figure>
+	 
 {% endblock %}
