--- a/templates/adoptant/index.html.twig
+++ b/templates/adoptant/index.html.twig
@@ -2,6 +2,16 @@
 
 {% block body %}
 
+<section class="py-5">
+	
+	<h3>Vos messages</h3>
+  <ol class="list-group list-group-numbered py-2">
+        {% for message in messages %}
+            <li class="list-group-item">{{ message.text }}</li>
+        {% endfor %}
+    </ol>
+</section>
+
 	{# {{ form_start(form)}}
 		{{ form_row(form.titre) }}
 		{{ form_row(form.adoptant) }}
