--- a/templates/demande_adoption/index.html.twig
+++ b/templates/demande_adoption/index.html.twig
@@ -51,5 +51,5 @@
 
 
 	 <figure id="galleryContainer"><img src="" alt=""></figure>
-	 
+	 <script src="{{ asset('js/gallery.js') }}"></script>
 {% endblock %}
