cintégration de docker avec 3 services php, phpMyadmin, MySql

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -75,7 +75,7 @@
 										{% else %}
 											<a href="{{path('app_logout')}}" class="p-0 nav-link">
 												<i class="fas fa-sign-out-alt"></i>
-												<br>Se déconnecteur
+												<br>Se déconnecter
 											</a>
 										{% endif %}
 									</div>
