--- a/templates/list/index.html.twig
+++ b/templates/list/index.html.twig
@@ -44,10 +44,9 @@
 
 					</div>
 				{% endfor %}
-				<a class="link-info" href="{{asset('list')}}">Voir tous les chiens >></a>
+				<a class="link-info" href="{{asset('/')}}">Retour à l'accueil >></a>
 			</div>
 		</section>
-
 
 	</main>
 {% endblock %}
