--- a/public/style/style.css
+++ b/public/style/style.css
@@ -95,7 +95,12 @@ header .btn-green:hover:after {
   opacity: 1;
   right: 0;
 }
-/********** cards-button ********/
+/********** cards ********/
+.carousel-inner img {
+  width: 300px;
+  height: 200px;
+  object-fit: cover;
+}
 .btn-dark-green {
   border: #97a23b solid 2px;
   background-color: #97a23b;
@@ -159,9 +164,18 @@ header .btn-green:hover:after {
 /* ************** Annonceur *******************************/
 
 .bg-overlay{
-  background-color: #00000070;;
+  background-color: #00000050;
 }
-
+.annonceurs img {
+  width: 325px;
+  height: 180px;
+  object-fit: cover;
+}
+.annonceur-detail img{
+  width: 600px;
+  height: 350px;
+  object-fit: cover;
+}
 /**************** Galerie image ****************************/
 .dogImg {
   border-radius: 5px;
@@ -197,4 +211,9 @@ header .btn-green:hover:after {
 #galleryContainer.visible {
   opacity: 1;
   visibility: visible;
+}
+#footer {
+  background-color: #97a23b;
+  color:#fff;
+  height: 80px;
 }
